Update developer API statistics in index.html to reflect a single API

--- a/templates/index.html
+++ b/templates/index.html
@@ -321,8 +321,8 @@
                                         d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"
                                     />
                                 </svg>
-                                <div class="use-case-stat">200+</div>
-                                <div class="use-case-stat-label">Developer APIs</div>
+                                <div class="use-case-stat">1</div>
+                                <div class="use-case-stat-label">Single API</div>
                             </div>
                             <div class="use-case-content">
                                 <h3>For Developers</h3>
