Add text alignment to format-value class in index.css for improved layout consistency

--- a/templates/styles/index.css
+++ b/templates/styles/index.css
@@ -1232,6 +1232,7 @@ footer .container {
 .format-value {
     font-family: monospace;
     word-break: break-all;
+    text-align: left;
 }
 
 @keyframes slideIn {
