--- a/templates/404.html
+++ b/templates/404.html
@@ -311,9 +311,8 @@
         <noscript>
             <style>
                 #search-button {
-                    opacity: 1;
-                    pointer-events: auto;
-                    animation: slideIn 0.3s forwards;
+                    opacity: 1 !important;
+                    pointer-events: auto !important;
                 }
             </style>
         </noscript>
