--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                         <h1>IPApi</h1>
                     </div>
                     <div class="search-container">
-                        <form id="search-form" class="search-wrapper" action="/json/" method="get">
+                        <form id="search-form" class="search-wrapper" action="/" method="post">
                             <input
                                 id="search-input"
                                 name="ip"
@@ -63,9 +63,9 @@
                             </button>
                         </form>
                         <div class="action-buttons">
-                            <a href="/json/self" id="my-ip">My IP</a>
-                            <a href="/json/8.8.8.8" id="try-example">Try Example</a>
-                            <a href="/json/208.67.222.222" id="feeling-lucky">I'm Feeling Lucky</a>
+                            <a href="/self" id="my-ip">My IP</a>
+                            <a href="/8.8.8.8" id="try-example">Try Example</a>
+                            <a href="/208.67.222.222" id="feeling-lucky">I'm Feeling Lucky</a>
                         </div>
                     </div>
                 </div>
